[package]
name = "uniswap-v2"
description = "Uniswap v2 in sway"
version = "0.1.0"
edition = "2021"
authors = ["Lokesh Kumar <hello@lokeshkr.com>"]
license = "Apache-2.0"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"

[dependencies]
fuels = { version = "0.62.0", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt","macros"] }
dotenv = "0.15.0"
